<resources>
    <string name="app_name">BWA Mov</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_description">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khwatir ketinggalan\nupdate film terbaru</string>
    <string name="cashles">Cashles</string>
    <string name="cashles_desc">Gunakan e-wallet untuk\ntransaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email">Email Adress</string>
    <string name="upload">Upload Nanti</string>
    <string name="photo">Photo</string>
    <string name="selamat_datang">Selamat Datang\nLukman Harun</string>
    <string name="simpan_dan_lanjutkan">Simpan dan Lanjutkan</string>
    <string name="coming_soon">Coming Sun</string>
    <string name="judul_film">Habibie Ainun:Drama</string>
    <string name="deskripsi_film">
        Rudy Habibie seorang genius ahli pesawat terbang yang punya mimpi besar.
        Berbakti kepada bangsa Indonesia dengan membuat pesawat terbang untuk menyatukan Indonesia.
    </string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="checkout">Checkout</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="when">When</string>
    <string name="datetime">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="simpan_data">Simpan Data Baru</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_history">My History</string>
    <string name="masuk_akun">MASUK AKUN</string>
    <string name="daftar_akun_baru">DAFTAR AKUN BARU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>